# Desafio_Data

./: .env.ex  .gitignore  README.md  desafio.md  desfio.md  pyproject.toml  requirements.txt
desafio_data/: cargar.py  config.py  extraer.py  main.py  script.py  transformar.py
desafio_data/sql/: tabla_categoria.sql  tabla_conf_cine.sql  tabla_fuente.sql  tabla_p_c.sql  tabla_raw.sql
